# oblivious-transfer

./: .gitignore  ChangeLog.md  LICENSE  README.md  oblivious-transfer.cabal  package.yaml  stack.yaml
.circleci/: config.yml
src/: OT.hs
test/: TestOT.hs
